--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boilerplate</title>
     <link rel="icon" type="jpeg" href="images/RL.jpg"/>
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 
     
 </head>
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 
 </body>
 </html>
